k8s/bgg/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  bggapp
  labels:
    name:  bggapp
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  bggapp
    spec:
      containers:
      - image:  balanus/bgg-app:v1
        name:  bggapp
        resources:
          requests:
            cpu: "100m"
            memory: "100M"
        livenessProbe:
          httpGet:
            path: /health
            port: bggappport
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: bggappport
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name:  bggappport
        imagePullPolicy: Always
      restartPolicy: Always
