k8s/bgg/db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  bggdb
  labels:
    name:  bggdb
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  bggdb
    spec:
      volumes:
      - name: volume1
        persistentVolumeClaim:
          claimName: bggdbpvc
      containers:
      - image:  balanus/bgg-db
        name:  bggdb
        ports:
        - containerPort:  3306
          name:  bggdbport
        imagePullPolicy: Always
        volumeMounts:
          - name:  volume1
            mountPath:  /var/lib/mysql
      restartPolicy: Always
