k8s/bgg/app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  bggappsvc
spec:
  selector:
    name:  bggapp
  type:  NodePort
  ports:
  - name:  bggappsvc-port
    port:  80
    targetPort:  bggappport
