k8s/bgg/db-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  bggdbsvc
spec:
  selector:
    name:  bggdb
  type:  ClusterIP
  ports:
  - name:  bggdbsvcport
    port:  3306
    targetPort:  bggdbport
